syntax = "proto3";
package didcomm;

option go_package = "didcomm/doorman/api";

message InvitationRequest {
  string agentID = 1;
  string name = 2;
}

message InvitationResponse {
  string Invitation = 1;
}

service Doorman {
  rpc GetInvitation (InvitationRequest) returns (InvitationResponse) {}
}